[gd_scene load_steps=14 format=3 uid="uid://d2qdj3fupco1p"]

[ext_resource type="Script" uid="uid://drrtn7ypcmgrp" path="res://Scripts/CharSel.gd" id="1_0naht"]
[ext_resource type="Texture2D" uid="uid://by026hscbtj88" path="res://Textures/O.png" id="2_15tlh"]
[ext_resource type="Texture2D" uid="uid://c1udcjokqh21s" path="res://Prefabs/Characters/Alex/AlexSelect.png" id="3_6ocmm"]
[ext_resource type="Texture2D" uid="uid://b2wlu71duoycw" path="res://Prefabs/Characters/Faelyn/FaelynSelect.png" id="4_76g5q"]
[ext_resource type="Theme" uid="uid://1cxfhyrtntpc" path="res://Prefabs/Themes/OC_theme.tres" id="6_qo1pb"]
[ext_resource type="PackedScene" uid="uid://btfs7qyf144ux" path="res://Prefabs/temp_sprite.tscn" id="6_xj3cx"]

[sub_resource type="Animation" id="Animation_aoou2"]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CurrentDis:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NextDis:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.588235), Color(1, 1, 1, 0), Color(1, 1, 1, 0.588235)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PrivDis:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.4, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.588235), Color(1, 1, 1, 0), Color(1, 1, 1, 0.588235)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"remSpr"
}, {
"args": [],
"method": &"UpdateSpr"
}]
}

[sub_resource type="Animation" id="Animation_ejqkc"]
resource_name = "rotate left"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("O:rotation")
tracks/0/interp = 4
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.392699, 0.418879, 0.392699]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CurrentDis:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6, 0.7, 0.8, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NextDis:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.7, 0.8, 0.9, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.588235), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 0.588235), Color(1, 1, 1, 0), Color(1, 1, 1, 0.588235)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PrivDis:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.8, 0.9, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.588235), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 0.588235), Color(1, 1, 1, 0), Color(1, 1, 1, 0.588235)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"remSpr"
}, {
"args": [],
"method": &"UpdateTexture"
}, {
"args": [],
"method": &"UpdateSpr"
}]
}

[sub_resource type="Animation" id="Animation_mi3cm"]
resource_name = "rotate right"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("O:rotation")
tracks/0/interp = 4
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.392699, -0.418879, -0.392699]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CurrentDis:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6, 0.7, 0.8, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NextDis:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.7, 0.8, 0.9, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.588235), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 0.588235), Color(1, 1, 1, 0), Color(1, 1, 1, 0.588235)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PrivDis:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.8, 0.9, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.588235), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 0.588235), Color(1, 1, 1, 0), Color(1, 1, 1, 0.588235)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"remSpr"
}, {
"args": [],
"method": &"UpdateTexture"
}, {
"args": [],
"method": &"UpdateSpr"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_of36r"]
_data = {
&"appear": SubResource("Animation_aoou2"),
&"rotate left": SubResource("Animation_ejqkc"),
&"rotate right": SubResource("Animation_mi3cm")
}

[sub_resource type="Animation" id="Animation_ebt6y"]
resource_name = "LabelAppear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spr:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_eoio2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spr:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qaee3"]
_data = {
&"LabelAppear": SubResource("Animation_ebt6y"),
&"RESET": SubResource("Animation_eoio2")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0naht")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.160784, 0.160784, 0.160784, 1)

[node name="O" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1366.0
offset_top = -1024.0
offset_right = 1366.0
offset_bottom = 1024.0
grow_horizontal = 2
grow_vertical = 0
rotation = 5.89049
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(1366, 1024)
texture = ExtResource("2_15tlh")

[node name="CurrentDis" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -239.0
offset_top = -861.0
offset_right = 800.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
rotation = 0.392699
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_6ocmm")

[node name="NextDis" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 441.0
offset_top = -778.0
offset_right = 1480.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 0
rotation = 1.1781
scale = Vector2(0.75, 0.75)
texture = ExtResource("4_76g5q")

[node name="PrivDis" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -777.0
offset_top = -442.0
offset_right = 262.0
offset_bottom = 395.0
grow_horizontal = 2
grow_vertical = 0
rotation = -0.390954
scale = Vector2(0.75, 0.75)

[node name="Spr" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.00012207
offset_right = -0.00012207
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)

[node name="TempSprite" parent="Spr" instance=ExtResource("6_xj3cx")]
visible = true
scale = Vector2(0.5, 0.5)

[node name="Label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -192.0
offset_right = 125.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("6_qo1pb")
horizontal_alignment = 1

[node name="LButton" type="Button" parent="."]
layout_mode = 0
offset_left = 433.0
offset_top = 831.0
offset_right = 834.0
offset_bottom = 1135.0
rotation = -0.785398
focus_mode = 0
flat = true

[node name="RButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1201.0
offset_top = 555.0
offset_right = 1602.0
offset_bottom = 859.0
rotation = 0.785398
focus_mode = 0
flat = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -244.0
offset_top = -106.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Select" type="Button" parent="MarginContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("6_qo1pb")
text = "Select"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -106.0
offset_right = 244.0
grow_vertical = 0
theme_override_constants/margin_left = 15
theme_override_constants/margin_bottom = 15

[node name="Back" type="Button" parent="MarginContainer2"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("6_qo1pb")
text = "Back"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -339.0
offset_right = 339.0
offset_bottom = 142.0
grow_horizontal = 2
alignment = 1

[node name="TextureRect1" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
expand_mode = 3

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
expand_mode = 3

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
expand_mode = 3

[node name="TextureRect4" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
expand_mode = 3

[node name="TextureRect5" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
expand_mode = 3

[node name="WarningLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = 389.992
offset_right = 180.0
offset_bottom = 415.008
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_qo1pb")
theme_override_colors/font_color = Color(1, 0.588235, 0.588235, 1)
theme_override_font_sizes/font_size = 15
text = "This character is not complete"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_of36r")
}

[node name="AnimationPlayerL" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qaee3")
}

[connection signal="pressed" from="LButton" to="." method="_on_l_button_pressed"]
[connection signal="pressed" from="RButton" to="." method="_on_r_button_pressed"]
[connection signal="pressed" from="MarginContainer/Select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="MarginContainer2/Back" to="." method="_on_back_pressed"]
